Adds new command for fixing long url overflow with \url{} command.

--- a/thesis/diploma.tex
+++ b/thesis/diploma.tex
@@ -142,6 +142,8 @@
 \newcommand{\tabaref}[1]{\aref{tab:#1}.}
 \newcommand{\tabAref}[1]{\Aref{tab:#1}.}
 
+\newcommand{\boldurl}[1]{\href{#1}{\textbf{#1}}}
+
 \author{\vikszerzo}
 
 %--------------------------------------------------------------------------------------
