Adds \boldurl{} example to mybib and chapter1.

--- a/thesis/chapter1.tex
+++ b/thesis/chapter1.tex
@@ -38,3 +38,5 @@ Táblázatokhoz ajánlom használni \href{https://www.tablesgenerator.com}{ezt} 
     cseresznye & piros      \\ \hline
   \end{tabular}
 \end{table}
+
+Hosszú URLeknél, előfordulhat hogy a \verb=\url{}=\cite{LongUrlExample1} parancs nem tördeli jól az URL-eket (túlfolyik a margón). Ennek kikerülésére használható a \verb=\boldurl{}=\cite{LongUrlExample2} parancs.
