--- a/thesis/mybib.bib
+++ b/thesis/mybib.bib
@@ -17,6 +17,18 @@
     year   = 1993,
 }
 
+@MISC{LongUrlExample1,
+	author="Ryan Collins",
+	title="{U}pdated {B}enchmarks for the {T}op {S}erver-{S}ide {S}wift {F}rameworks vs. {N}ode.js (2018. november 10.)",
+	howpublished = "\url{https://medium.com/@rymcol/updated-benchmarks-for-the-top-server-side-swift-frameworks-vs-node-js-9da4a0491eca}",
+}
+
+@MISC{LongUrlExample2,
+	author="Ryan Collins",
+	title="{U}pdated {B}enchmarks for the {T}op {S}erver-{S}ide {S}wift {F}rameworks vs. {N}ode.js (2018. november 10.)",
+	howpublished = {\boldurl{https://medium.com/@rymcol/updated-benchmarks-for-the-top-server-side-swift-frameworks-vs-node-js-9da4a0491eca}},
+}
+
 @MISC{Swift,
   author="Apple Inc.",
   title="{A}bout {S}wift (2016. november 21.)",
